--- a/public/estilo.css
+++ b/public/estilo.css
@@ -1,3 +1,15 @@
 .verdana {
   font-family: verdana;
 }
+
+.fondo-gris {
+  background-color: #dfe2e2;
+}
+
+.no-user-select {
+  user-select: none;
+}
+
+.no-pointer-events {
+  pointer-events: none;
+}
