Modularizando el intérprete y haciendo que se se puedan arrastrar y soltar funciones desde el panel lateral.

--- a/public/estilo.css
+++ b/public/estilo.css
@@ -118,3 +118,7 @@ input[type=range]:focus::-ms-fill-lower {
 input[type=range]:focus::-ms-fill-upper {
   background: #2497E3;
 }
+
+.resaltar-linea {
+  border-bottom: 2px solid #b0ccff;
+}
